Adding model prediction for events

--- a/code/model-implementation.ipynb
+++ b/code/model-implementation.ipynb
@@ -265,7 +265,8 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/12/10 18:17:50 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/12/14 19:11:57 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/12/14 19:11:57 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
       "/Users/priyangshupal/anaconda3/lib/python3.11/site-packages/pyspark/sql/context.py:157: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
       "  warnings.warn(\n"
      ]
@@ -441,7 +442,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/12/10 18:17:56 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n"
+      "23/12/14 19:12:03 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n"
      ]
     }
    ],
@@ -548,8 +549,8 @@
      "text": [
       "Model type      Training and inference time    Mean Squared Error\n",
       "------------  -----------------------------  --------------------\n",
-      "Sklearn                           0.0479972              0.373333\n",
-      "PySpark                           2.99101                0.421875\n"
+      "Sklearn                            0.021121              0.373333\n",
+      "PySpark                            3.02262               0.421875\n"
      ]
     }
    ],
@@ -561,6 +562,596 @@
     "    headers=['Model type', 'Training and inference time', 'Mean Squared Error']\n",
     "  )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "742456cf",
+   "metadata": {},
+   "source": [
+    "## Scrape Reddit Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ad639575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import praw\n",
+    "import pandas as pd\n",
+    "from datetime import datetime, timedelta\n",
+    "from pyspark.sql import SparkSession\n",
+    "import pyspark.sql.functions as F\n",
+    "import pyspark.sql.types as T\n",
+    "from pyspark.ml.classification import LogisticRegression\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "from pyspark.ml.feature import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e5a0c77a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reddit = praw.Reddit(\n",
+    "    client_id=\"\",\n",
+    "    client_secret=\"\",\n",
+    "    password=\"\",\n",
+    "    user_agent=\"\",\n",
+    "    username=\"\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e521d7c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize Spark session\n",
+    "# spark = SparkSession.builder.appName('RedditData').getOrCreate()\n",
+    "\n",
+    "subreddit_name = 'nyc'  # Change this to your target subreddit\n",
+    "search_query = 'event'  # Modify this based on how events are typically posted\n",
+    "six_months_ago = datetime.utcnow() - timedelta(days=6*30)  # Approximation of 6 months\n",
+    "\n",
+    "# Lists to store event and comments data\n",
+    "events = []\n",
+    "comments_data = []\n",
+    "\n",
+    "# Search the subreddit for posts containing 'event' in the title\n",
+    "for submission in reddit.subreddit(subreddit_name).search(search_query, limit=10):  # Adjust the limit as needed\n",
+    "    # if datetime.utcfromtimestamp(submission.created_utc) > six_months_ago:\n",
+    "    submission.comments.replace_more(limit=None)  # Load all comments\n",
+    "    event_info = (\n",
+    "        submission.title,\n",
+    "        submission.url,\n",
+    "        datetime.utcfromtimestamp(submission.created_utc).strftime('%Y-%m-%d %H:%M:%S'),\n",
+    "        len(submission.comments)\n",
+    "    )\n",
+    "    events.append(event_info)\n",
+    "\n",
+    "    # Extract comments and add to comments_data\n",
+    "    for comment in submission.comments.list():\n",
+    "        comment_info = (submission.title, submission.url, comment.body)\n",
+    "        comments_data.append(comment_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "48eb4baf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create DataFrames\n",
+    "events_df = pd.DataFrame(events, columns=['title', 'url', 'created', 'num_comments'])\n",
+    "comments_df = pd.DataFrame(comments_data, columns=['title', 'url', 'comment'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b2643b9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert Pandas DataFrames to Spark DataFrames\n",
+    "spark_events_df = spark.createDataFrame(events_df)\n",
+    "spark_comments_df = spark.createDataFrame(comments_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "0dd7b3d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+-------------------+------------+\n",
+      "|               title|                 url|            created|num_comments|\n",
+      "+--------------------+--------------------+-------------------+------------+\n",
+      "|Rockefeller Cente...|https://www.reddi...|2023-11-30 05:50:02|          58|\n",
+      "|Drama at a drag q...|https://v.redd.it...|2022-12-12 07:28:34|          73|\n",
+      "|NYC Drag Story Ho...|https://www.nbcne...|2022-12-19 14:52:13|          47|\n",
+      "|Eric Adams attend...|https://www.polit...|2023-11-17 13:41:16|          27|\n",
+      "|NYC Mayor Adams i...|https://www.nydai...|2023-05-12 18:19:26|          28|\n",
+      "|NYC's Newest Park...|https://i.redd.it...|2021-05-21 17:03:37|          40|\n",
+      "|Republican Jewish...|https://www.haare...|2022-12-27 17:07:57|          35|\n",
+      "|Trump Attends UFC...|https://www.theda...|2019-11-03 12:41:48|          30|\n",
+      "|Ahead of potentia...|https://www.polit...|2023-02-19 17:28:21|          29|\n",
+      "|'Change in percep...|https://www.nbcne...|2021-12-18 16:10:25|          30|\n",
+      "+--------------------+--------------------+-------------------+------------+\n",
+      "\n",
+      "+--------------------+--------------------+--------------------+\n",
+      "|               title|                 url|             comment|\n",
+      "+--------------------+--------------------+--------------------+\n",
+      "|Rockefeller Cente...|https://www.reddi...|I swear I feel li...|\n",
+      "|Rockefeller Cente...|https://www.reddi...|What was the deal...|\n",
+      "|Rockefeller Cente...|https://www.reddi...|The protest was o...|\n",
+      "|Rockefeller Cente...|https://www.reddi...|Palestinians prot...|\n",
+      "|Rockefeller Cente...|https://www.reddi...|God forbid people...|\n",
+      "|Rockefeller Cente...|https://www.reddi...|What are they eve...|\n",
+      "|Rockefeller Cente...|https://www.reddi...|God forbid we can...|\n",
+      "|Rockefeller Cente...|https://www.reddi...|Jesus Christ I fe...|\n",
+      "|Rockefeller Cente...|https://www.reddi...|As a Jew, we are ...|\n",
+      "|Rockefeller Cente...|https://www.reddi...|I was there, and ...|\n",
+      "+--------------------+--------------------+--------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display the DataFrames\n",
+    "spark_events_df.show(10)\n",
+    "spark_comments_df.show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c6b5d4c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comments = spark_comments_df.select(['comment']).withColumnRenamed('comment', 'text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "19edb7e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comments = comments.withColumn('text', F.lower(F.col('text')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "926728e3",
+   "metadata": {},
+   "source": [
+    "#### Remove stopwords from text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9689ffab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/priyangshupal/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "d8ada0d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c8119a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\"]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stopwords.words('english')[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "2737d5d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeStopwords(text):\n",
+    "  return \" \".join([word for word in text.split() if word not in stopwords.words('english')])\n",
+    "\n",
+    "removeStopwordsUDF = F.udf(removeStopwords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b0ce909e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comments = comments.withColumn('text', removeStopwordsUDF(F.col('text')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad2a89e1",
+   "metadata": {},
+   "source": [
+    "#### Remove punctuations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "926f63e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "baf29b5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bf2c166e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_punctuations(text):\n",
+    "    # Make a translation table that maps all punctuation characters to None\n",
+    "    translator = str.maketrans(\"\", \"\", string.punctuation)\n",
+    "\n",
+    "    # Apply the translation table to the input string\n",
+    "    return text.translate(translator)\n",
+    "\n",
+    "removePunctuationsUDF = F.udf(remove_punctuations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "c2b23786",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comments = comments.withColumn('text', removePunctuationsUDF(F.col('text')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf933773",
+   "metadata": {},
+   "source": [
+    "#### Remove emails, emojis, urls etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ef44d769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import emoji\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "3ec25d24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_regex = '((www\\.[^\\s]+)|(https?://[^\\s]+))'\n",
+    "username_regex = '@[^\\s]+'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "91e8d36b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_urls(text):\n",
+    "  return re.sub(url_regex, '', text)\n",
+    "\n",
+    "def remove_usernames(text):\n",
+    "  return re.sub(username_regex, '', text)\n",
+    "\n",
+    "def remove_emojis(text):\n",
+    "  return emoji.demojize(text)\n",
+    "\n",
+    "remove_urlsUDF = F.udf(remove_urls)\n",
+    "remove_usernamesUDF = F.udf(remove_usernames)\n",
+    "remove_emojisUDF = F.udf(remove_emojis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "7fcc9561",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comments = comments.withColumn('text', remove_urlsUDF(F.col('text')))\n",
+    "comments = comments.withColumn('text', remove_usernamesUDF(F.col('text')))\n",
+    "comments = comments.withColumn('text', remove_emojisUDF(F.col('text')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9487d1df",
+   "metadata": {},
+   "source": [
+    "#### Tokenizing, stemming, and lemmatizing the text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3c00d8ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "from nltk.stem import PorterStemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5d213e51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize_stem_lemmatize(text):\n",
+    "    tokenizer = RegexpTokenizer('\\w+')\n",
+    "    tokenized_words = tokenizer.tokenize(text)\n",
+    "    \n",
+    "    # Stemming logic\n",
+    "    stemmer = PorterStemmer()\n",
+    "    stemmed_words = [stemmer.stem(word) for word in tokenized_words]\n",
+    "    \n",
+    "    # Lemmatizing logic\n",
+    "    lemmatizer = nltk.WordNetLemmatizer()\n",
+    "    lemmatized_words = [lemmatizer.lemmatize(word, pos = 'a') for word in stemmed_words]\n",
+    "    \n",
+    "    return ' '.join(lemmatized_words)\n",
+    "\n",
+    "tokenize_stem_lemmatizeUDF = F.udf(tokenize_stem_lemmatize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b8b4d603",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comments = comments.withColumn('text', tokenize_stem_lemmatizeUDF(F.col('text')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "9cb51b33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|                text|\n",
+      "+--------------------+\n",
+      "|swear feel like e...|\n",
+      "|deal propalestini...|\n",
+      "|protest organ wit...|\n",
+      "|palestinian prote...|\n",
+      "|god forbid peopl ...|\n",
+      "|even protest righ...|\n",
+      "|god forbid enjoy ...|\n",
+      "|jesu christ feel ...|\n",
+      "|jew sorri guy did...|\n",
+      "|   there disgust see|\n",
+      "+--------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comments.show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3877ccb4",
+   "metadata": {},
+   "source": [
+    "#### Preparing word embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "0afd419c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comments = comments.withColumn('text', F.split(F.col('text'), ' '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "c0d1eebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = CountVectorizer(inputCol='text', outputCol='embeddings', vocabSize=3216)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "a3e75f96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = cv.fit(comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1a89404c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comments = model.transform(comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "81ac26ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+\n",
+      "|                text|          embeddings|\n",
+      "+--------------------+--------------------+\n",
+      "|[swear, feel, lik...|(3216,[2,104,113,...|\n",
+      "|[deal, propalesti...|(3216,[33,87,102,...|\n",
+      "|[protest, organ, ...|(3216,[0,13,21,48...|\n",
+      "|[palestinian, pro...|(3216,[8,13,112,1...|\n",
+      "|[god, forbid, peo...|(3216,[0,6,41,62,...|\n",
+      "|[even, protest, r...|(3216,[1,6,13,17,...|\n",
+      "|[god, forbid, enj...|(3216,[12,91,211,...|\n",
+      "|[jesu, christ, fe...|(3216,[4,8,13,15,...|\n",
+      "|[jew, sorri, guy,...|(3216,[4,15,37,96...|\n",
+      "|[there, disgust, ...|(3216,[19,39,1407...|\n",
+      "+--------------------+--------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comments.show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "1ce516d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = model_fitted_pyspark.transform(comments).groupBy('prediction')\\\n",
+    ".count().orderBy(\"count\", ascending=False).first()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "93d28ca8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failure\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Success' if prediction == 1.0 else 'Failure')"
    ]
   }
  ],
